package game.level;

public class Camera {
    public Camera() {
        position = new Vec2();
        scissor = new Vec2();
    }
    public Vec2 position;
    public Vec2 scissor;
}